--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.0",
@@ -21,8 +22,11 @@
     "mongoose": "^8.0.1",
     "next": "14.0.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-google-charts": "^4.0.1",
     "react-icons": "^4.12.0",
+    "recharts": "^2.10.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "styled-components": "^6.1.1",
